[gd_scene load_steps=7 format=2]

[ext_resource path="res://ui/gridmenu/GridMenu.gd" type="Script" id=1]
[ext_resource path="res://ui/theme/main.theme" type="Theme" id=2]
[ext_resource path="res://ui/gridmenu/GridMenuButton.gd" type="Script" id=3]
[ext_resource path="res://ui/ubuntu-bold-medium.tres" type="DynamicFont" id=13]

[sub_resource type="StyleBoxEmpty" id=24]

[sub_resource type="Theme" id=23]
default_font = ExtResource( 13 )
HBoxContainer/constants/separation = 15
VBoxContainer/constants/separation = 15

[node name="GridMenuButton" type="Button"]
margin_right = 12.0
margin_bottom = 20.0
focus_mode = 0
theme = ExtResource( 2 )
text = "grid menu button"
expand_icon = true
script = ExtResource( 3 )
offset = null

[node name="Popup" type="PopupPanel" parent="."]
margin_right = 50.0
margin_bottom = 40.0
rect_min_size = Vector2( 30, 20 )
size_flags_horizontal = 4
size_flags_vertical = 4
custom_styles/panel = SubResource( 24 )

[node name="GridMenu" type="GridContainer" parent="Popup"]
margin_right = 50.0
margin_bottom = 40.0
rect_min_size = Vector2( 30, 20 )
theme = SubResource( 23 )
custom_constants/vseparation = 0
custom_constants/hseparation = 0
script = ExtResource( 1 )

[connection signal="pressed" from="Popup/GridMenu" to="." method="_on_GridMenu_pressed"]
